update list ejs var

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -22,7 +22,7 @@
         <!-- LIST -->
         <div class="col-sm-6">
             <div class="well">
-                <%=list%>
+                <%= tasks %>
                 <!--
                 <h3><span class="fa fa-user"></span> Local</h3>
 
