--- a/views/TaskForm.ejs
+++ b/views/TaskForm.ejs
@@ -22,13 +22,19 @@
         <!-- LIST -->
         <div class="col-sm-6">
             <div class="well">
-                
-                    POTENTIAL TASK MASTERS
-                    <select name="taskMaster">
+                    <form name="taskForm" action="/task" method="post">
+                    TASK NAME: <input type="text" name="name" id="name"><br>
+                    TASK DESCRIPTION: <input type="text" name="description" id="description"><br>
+                    COMPLETE BY DATE: <input id="completeBy" type="date" name="completeBy"><Br>
+                    TASK MASTER:
+                    <select name="taskMaster" id="taskMaster">
                         <% for (i=0;i<users.length;i++){%>
                             <option value="<%= users[i]['_id'] %>"><%= users[i]['local']['email'] %></option>
                         <%}%>
                     </select>
+                    <br>
+                    <input type="submit" value="Submit that shit, yo!">
+                    </form>
             </div>
         </div>
 
