--- a/views/TaskForm.ejs
+++ b/views/TaskForm.ejs
@@ -24,7 +24,8 @@
             <div class="well">
                     <form name="taskForm" action="/task" method="post">
                     TASK NAME: <input type="text" name="name" id="name"><br>
-                    TASK DESCRIPTION: <input type="text" name="description" id="description"><br>
+                    TASK DESCRIPTION: <textarea name="description" id="description"></textarea> 
+                    <br>
                     COMPLETE BY DATE: <input id="completeBy" type="date" name="completeBy"><Br>
                     TASK MASTER:
                     <select name="taskMaster" id="taskMaster">
