Quick front-end files.

--- a/views/TaskForm.ejs
+++ b/views/TaskForm.ejs
@@ -5,8 +5,9 @@
     <title>Nick's List</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Poppins:200,400,700,900" rel="stylesheet">    
     <style>
-        body        { padding-top:80px; word-wrap:break-word; }
+
     </style>
 </head>
 <body>
