--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,20 +5,25 @@
     <title>Nick's List</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Poppins:200,400,700,900" rel="stylesheet">
     <style>
-        body        { padding-top:80px; }
+
     </style>
 </head>
 <body>
 <div class="container">
 
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span>Nick's List</h1>
-
-        <p>Login or Register:</p>
-
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span>Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span>Register</a>
+    <div class="jumbotron text-center" style="padding: 80px; margin: 50px; border-radius: 10px; background-color: #66BFBF; color: white; font-family: 'Poppins', sans-serif;">
+        <h1 style="font-family: 'Permanent Marker', cursive; font-size: 60pt">WELCOME.</h1>
+        <h2>You're finally gonna get things done.</h2>
+        <p>
+        You say you’re gonna make a list of to-dos, and you can’t even bother to lift your lazy little finger. <br />All of that is gonna change. Now you’re gonna hold yourself accountable. <br />More specifically, other people are gonna hold you accountable. And they’re gonna call you out.
+        </p>
+        <p>
+        Still up for it? Good. Create yourself an account and make yourself useful.
+        </p>
+        <a href="/login" class="btn btn-warning btn-lg"  style="margin-top: 30px; background-color: #F76B8A; border: #F76B8A; font-family: 'Poppins', sans-serif;">Login</a>
+        <a href="/signup" class="btn btn-warning btn-lg" style="margin-top: 30px; background-color: #F76B8A; border: #F76B8A; font-family: 'Poppins', sans-serif;">Register</a>
     </div>
 
 </div>
