--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
         <h1 style="font-family: 'Permanent Marker', cursive; font-size: 60pt">WELCOME.</h1>
         <h2>You're finally gonna get things done.</h2>
         <p>
-        You say you’re gonna make a list of to-dos, and you can’t even bother to lift your lazy little finger. <br />All of that is gonna change. Now you’re gonna hold yourself accountable. <br />More specifically, other people are gonna hold you accountable. And they’re gonna call you out.
+        You say you’re gonna make a list of to-dos, and then you can’t even bother to lift a lazy little finger to write the damn list. All of that is gonna change. Now you’re gonna hold yourself to your task. More specifically, other people are gonna hold you accountable. And boy, they’re gonna call you out.
         </p>
         <p>
         Still up for it? Good. Create yourself an account and make yourself useful.
