--- a/views/list.ejs
+++ b/views/list.ejs
@@ -25,14 +25,15 @@
                         <ul class="nav navbar-nav navbar-right">
                                 <li class="dropdown">
                                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-                                  <ul class="dropdown-menu">
-                                    <li><a href="#">Settings</a></li>
+                                  <ul class="dropdown-menu" style='background-color: #66BFBF'>
+                                    <li><a href="/profile" style='color: white; text-align:center'>Settings</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="#">My Lazy Friends</a></li>
+                                    <li><a href="#" style='color: white; text-align:center'>My Lazy Friends</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="#">Network</a></li>
+                                    <li><a href="#" style='color: white; text-align:center'>Network</a></li>
                                   </ul>
                                 </li>
+                                <a href="/logout" class="btn btn-default btn-sm" style='margin: 10px'>Logout</a>
                               </ul>  
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
@@ -64,28 +65,33 @@
 <div class="container">
 
     <div class="page-header text-center">
-        <h1>Your To-dos</h1>
-        <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+        <h1 style="color: #F76B8A; font-family: 'Permanent Marker', cursive; font-size: 36pt;">Tasks and Task History</h1>
     </div>
 
-    <div class="row">
+    <div class="row"  style='padding: 10px;'>
 
         <!-- LIST -->
-        <div class="col-sm-6">
+        <div class="col-lg-12">
             <div class="well" style="color: gray; margin: 50px; border-radius: 10px; background-color: #EAF6F6; font-family: 'Poppins', sans-serif;">
                 <% if(tasks.length === 0) {%>
-                    <div class="row">
+                    <div class="row" style='padding: 10px;'>
                         <div class="col-sm-12">
                              You have no tasks, bitch                                
                         </div>
                     </div>
+                    <div class="row">
+                            <div class="col-sm-6">
+                                <button onclick="document.location.href='/taskform'" class="btn btn-default btn-sm" style='color: white; background-color: #F76B8A;'>Click here to add a new task</button>
+                            </div>
+                        </div>
                 <% } %>
 
                <!--LOOPS OVER THE TASK ARRAY BEING PASSED IN-->
                <% for (i=0;i<tasks.length;i++){%>
-                    <div class="row">
+                    <div class="row" style='padding: 10px;'>
                         <div class="col-sm-10">
-                                NAME : <%= tasks[i]['name'] %>
+                              <div>NAME : <%= tasks[i]['name'] %></div>
+                              <div>DESCRIPTION : <%= tasks[i]['description'] %></div>
                         </div>
                         <div class="col-sm-2">
                             <button class="btn btn-default btn-sm completionButton" 
@@ -95,13 +101,7 @@
                         </div>
                     </div>
                 <%}%>
-                
-                <div class="row">
-                    <div class="col-sm-6">
-                        <button onclick="document.location.href='/taskform'" class="btn btn-default btn-sm" style='color: white; background-color: #F76B8A;'>Click here to add a new task</button>
-                    </div>
- 
-                </div>
+            </div>
 
             </div>
         </div>
