--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,16 +5,18 @@
     <title>Nick's List</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Poppins:200,400,700,900" rel="stylesheet">
     <style>
-        body        { padding-top:80px; }
+        body        { padding-top:80px; word-wrap:break-word; }
     </style>
 </head>
 <body>
+
 <div class="container">
 
 <div class="col-sm-6 col-sm-offset-3">
 
-    <h1><span class="fa fa-sign-in"></span> Signup</h1>
+    <h1 style="color: #F76B8A; font-family: 'Permanent Marker', cursive; font-size: 36pt;">Signup</h1>
 
     <!-- show any messages that come back with authentication -->
     <% if (message.length > 0) { %>
@@ -23,21 +25,21 @@
 
     <!-- LOGIN FORM -->
     <form action="/signup" method="post">
-        <div class="form-group">
+        <div class="form-group"  style='font-family: 'Poppins', sans-serif;'>
             <label>Email</label>
             <input type="text" class="form-control" name="email">
         </div>
-        <div class="form-group">
+        <div class="form-group"  style='font-family: 'Poppins', sans-serif;'>
             <label>Password</label>
             <input type="password" class="form-control" name="password">
         </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Signup</button>
+        <button type="submit" class="btn btn-warning btn-lg" style='background-color:#66BFBF; border: #66BFBF'>Signup</button>
     </form>
 
     <hr>
 
-    <p>Already have an account? <a href="/login">Login</a></p>
+    <p  style='font-family: 'Poppins', sans-serif;'>Already have an account? <a href="/login">Login</a></p>
     <p>Or go <a href="/">home</a>.</p>
 
 </div>
