--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,7 +43,7 @@
     <p>Or go <a href="/">home</a>.</p>
 
 </div>
-
 </div>
+<h1 style="color: #F76B8A; font-family: 'Permanent Marker', cursive; font-size: 72pt; float: right; margin-right: 50px; margin-top: 350px">Nick's List</h1>
 </body>
 </html>
